Fixed text overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ h3 {
   align-items: center;
   flex-wrap: wrap;
   padding: 40px 0;
+  margin:100px;
   /* margin: none; */
 }
 
